[gd_scene load_steps=6 format=3 uid="uid://cu2w013yn7cic"]

[ext_resource type="Script" path="res://core/ui/menu/qam/quick_settings_menu.gd" id="1_gwnsx"]
[ext_resource type="PackedScene" uid="uid://bsfyu747dqwcm" path="res://core/systems/input/focus_manager.tscn" id="2_6j2qt"]
[ext_resource type="PackedScene" uid="uid://cemxrvvjgm4g" path="res://core/ui/components/slider.tscn" id="2_v67rd"]
[ext_resource type="PackedScene" uid="uid://d1qb7euwlu7bh" path="res://core/ui/components/toggle.tscn" id="3_2eg06"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="3_gbk7l"]

[node name="QuickSettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_gwnsx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FocusManager" parent="VBoxContainer" instance=ExtResource("2_6j2qt")]

[node name="SectionLabel" parent="VBoxContainer" instance=ExtResource("3_gbk7l")]
layout_mode = 2
text = "Quick Settings"

[node name="VolumeSlider" parent="VBoxContainer" instance=ExtResource("2_v67rd")]
unique_name_in_owner = true
layout_mode = 2
text = "Volume"

[node name="BrightnessSlider" parent="VBoxContainer" instance=ExtResource("2_v67rd")]
unique_name_in_owner = true
layout_mode = 2
text = "Brightness"
step = 3.0

[node name="PerGameToggle" parent="VBoxContainer" instance=ExtResource("3_2eg06")]
layout_mode = 2
focus_neighbor_left = NodePath("../SaturationSlider")
focus_neighbor_top = NodePath("../SaturationSlider")
focus_neighbor_right = NodePath("../SaturationSlider")
focus_neighbor_bottom = NodePath("../SaturationSlider")
focus_next = NodePath("../SaturationSlider")
focus_previous = NodePath("../SaturationSlider")
text = "Per-game Profile"

[node name="SaturationSlider" parent="VBoxContainer" instance=ExtResource("2_v67rd")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../PerGameToggle")
focus_neighbor_top = NodePath("../PerGameToggle")
focus_neighbor_right = NodePath("../PerGameToggle")
focus_neighbor_bottom = NodePath("../PerGameToggle")
focus_next = NodePath("../PerGameToggle")
focus_previous = NodePath("../PerGameToggle")
text = "Saturation"
value = 100.0
max_value = 400.0
